See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 11.09.00

              pbmtoascii: fix bug: allows both -1x2 and -2x4.  Always present
              (pbmtoascii existed in primordial Netpbm).

              build: fix type mismatch warning linking ppmtompeg.
              Always broken (ppmtompeg was new to Netpbm in April 2004).

24.09.29 BJH  Release 11.08.00

              libnetpbm color name parsing: Fix handling of rgb: color names
              with more than 4 hex digits per plane, so it throws an error
              instead of generating an invalid or wrong color.  Broken in
              primordial Netpbm.

              libnetpbm color name parsing: Fix error message for invalid
              rgb-<MAXVAL> color name.

              build: fix typo in check of DARWIN_C_SOURCE so strdup, etc.
              are properly defined on OS X.

24.06.28 BJH  Release 11.07.00

              libnetpbm: Fix double free crash when memory allocation via
              REALLOCARRAY fails.  Introduced in Netpbm 10.40 (September
              2007).

              libnetpbm: Allow color dictionary with more than 1000 entries.

              ppmhist, ppmtoxpm: Work with color dictionary with more than
              1000 color entries.

              rgb.txt: Add Resene paint colors, 2010.

24.03.30 BJH  Release 11.06.00

              pamcut: add -reportonly.

              infotopam: Add input validation.

              infotopam: Remove input file name from messages.  Add -verbose
              and issue informational message only if it is specified.

              libnetpbm: Don't ignore garbage at the end of a color specifier
              (e.g. rgbi:0/.5/1xyz).

              color database: change names of "Spring Green", "Lamp Black",
              and "light grey" to "SpringGreen", "LampBlack", and "LightGrey"
              to be consistent with other color names.
